--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>Billing Panda - Innovative Billing & Invoicing Solutions</title>
-    <meta name="title" content="Billing Panda - Innovative Billing & Invoicing Solutions">
-    <meta name="description" content="Billing Panda offers smart, efficient billing and invoicing solutions for modern businesses. Simplify your financial operations with our user-friendly platform.">
-    <meta name="keywords" content="billing software, invoice management, payment processing, business automation, financial management, digital invoicing, Billing Panda">
-    <meta name="author" content="Billing Panda">
+    <title>S.D. Taxation Associate</title>
+    <meta name="title" content="S.D. Taxation Associate">
+    <meta name="description" content="S.D. Taxation Associate">
+    <meta name="keywords" content="S.D. Taxation Associate">
+    <meta name="author" content="S.D. Taxation Associate">
     <meta name="robots" content="index, follow">
     
     <!-- Open Graph / Facebook -->
